improves text placement. fixes z-index duplications and moves z-index of the layer selector to the top

--- a/themes/css/map/cartodb-map-light.css
+++ b/themes/css/map/cartodb-map-light.css
@@ -1259,7 +1259,7 @@ div.cartodb-layer-selector-box {
   -o-border-radius: 4px;
   border-radius: 4px;
   border: 1px solid #999999;
-  z-index:5;
+  z-index:100000;
 }
 
 div.cartodb-layer-selector-box a.layers {
@@ -1481,7 +1481,6 @@ div.cartodb-searchbox {
   -webkit-box-shadow: rgba(0, 0, 0, 0.2) 0 0 4px 2px;
   -moz-box-shadow: rgba(0, 0, 0, 0.2) 0 0 4px 2px;
   box-shadow: rgba(0, 0, 0, 0.2) 0 0 4px 2px;
-  z-index: 5;
   background: white;
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
@@ -1560,7 +1559,6 @@ div.cartodb-infobox {
   -webkit-box-shadow: rgba(0, 0, 0, 0.2) 0 0 4px 2px;
   -moz-box-shadow: rgba(0, 0, 0, 0.2) 0 0 4px 2px;
   box-shadow: rgba(0, 0, 0, 0.2) 0 0 4px 2px;
-  z-index: 5;
   background: white;
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
